Libreria RichFaces UI 3.3.4 Eliminate tutte le segnalazioni dovute alla gestione di script ed eventi per il componente DataScroller.